[PCF] Add producer fusion into pcf.generic/loop ops
Add FuseProducersPass (iree-pcf-fuse-producers) that fuses DPS producers
into pcf.generic and pcf.loop ops through their tied init arguments.

For each tied init that is the single result of a TilingInterface +
DestinationStyleOpInterface producer (e.g. linalg.fill, linalg.transpose),
the pass:
1. Replaces the scoped op's init with the producer's DPS init
2. At each pcf.read_slice on the corresponding sref, generates a tiled
   version of the producer via generateResultTileValue
3. For vector-typed read_slices, converts the tiled tensor result to a
   vector via vector.transfer_read
4. Erases the original producer if it has no remaining uses

The pass requires SyncOnReturn semantics on the sref, under which
overlapping reads and writes are undefined behavior, allowing all reads
to be treated as seeing the init value.

--- a/compiler/src/iree/compiler/Codegen/Dialect/PCF/Transforms/CMakeLists.txt
+++ b/compiler/src/iree/compiler/Codegen/Dialect/PCF/Transforms/CMakeLists.txt
@@ -32,6 +32,7 @@ iree_cc_library(
     "ConvertSRefToMemRef.cpp"
     "FuseConsumers.cpp"
     "FusePCFWrites.cpp"
+    "FuseProducers.cpp"
     "LowerStructuralPCF.cpp"
     "Passes.cpp"
     "ResolveTokens.cpp"
