--- a/compiler/src/iree/compiler/Codegen/Dialect/PCF/Transforms/BUILD.bazel
+++ b/compiler/src/iree/compiler/Codegen/Dialect/PCF/Transforms/BUILD.bazel
@@ -39,6 +39,7 @@ iree_compiler_cc_library(
         "ConvertSRefToMemRef.cpp",
         "FuseConsumers.cpp",
         "FusePCFWrites.cpp",
+        "FuseProducers.cpp",
         "LowerStructuralPCF.cpp",
         "Passes.cpp",
         "ResolveTokens.cpp",
