--- a/compiler/plugins/input/StableHLO/BUILD.bazel
+++ b/compiler/plugins/input/StableHLO/BUILD.bazel
@@ -24,6 +24,7 @@ iree_compiler_cc_library(
     ],
     deps = [
         "//compiler/plugins/input/StableHLO/Conversion",
+        "//compiler/src/iree/compiler/Dialect/Flow/IR",
         "//compiler/src/iree/compiler/PluginAPI",
         "@llvm-project//mlir:ConversionPasses",
         "@llvm-project//mlir:IR",
