Move Convert1X1FilterConv2DToMatmul pass from GlobalOptimization to Preprocessing
Signed-off-by: yzhang93 <zhyuhang88@gmail.com>

--- a/compiler/src/iree/compiler/Preprocessing/Common/CMakeLists.txt
+++ b/compiler/src/iree/compiler/Preprocessing/Common/CMakeLists.txt
@@ -28,6 +28,7 @@ iree_cc_library(
   SRCS
     "ApplyPDLPatterns.cpp"
     "AttrBasedPipelinePass.cpp"
+    "Convert1X1FilterConv2DToMatmul.cpp"
     "ConvertConv2DToImg2Col.cpp"
     "ConvertConvFilterToChannelsLast.cpp"
     "ConvertConvToChannelsLast.cpp"
