[GlobalOptimization] Move ConvertConv2DToImg2Col pass from Preprocessing
Move the Conv2D to Img2Col transformation pass from Preprocessing to
GlobalOptimization phase. This allows the pass to run after
LinalgQuantizedConvToConvPass, enabling quantized convolutions to
benefit from the img2col transformation.

Signed-off-by: Phoebe Chen <phoebe.chen@sifive.com>

--- a/compiler/src/iree/compiler/GlobalOptimization/CMakeLists.txt
+++ b/compiler/src/iree/compiler/GlobalOptimization/CMakeLists.txt
@@ -41,6 +41,7 @@ iree_cc_library(
     "Utils.h"
   SRCS
     "CleanupNumericNarrowing.cpp"
+    "ConvertConv2DToImg2Col.cpp"
     "ConvertStridedContractionToContraction.cpp"
     "DataLayoutPropagation.cpp"
     "DecomposeConcat.cpp"
