[GlobalOptimization] Update tests for Conv2D to Img2Col pass
Move test file from Preprocessing to GlobalOptimization and update
preprocessing_flags.mlir to remove references to the moved pass.

Signed-off-by: Phoebe Chen <phoebe.chen@sifive.com>

--- a/compiler/src/iree/compiler/GlobalOptimization/test/BUILD.bazel
+++ b/compiler/src/iree/compiler/GlobalOptimization/test/BUILD.bazel
@@ -18,6 +18,7 @@ iree_lit_test_suite(
         # keep sorted
         [
             "cleanup_numeric_narrowing.mlir",
+            "conv2d_to_img2col.mlir",
             "data_layout_propagation.mlir",
             "demote_contraction_inputs_to_bf16.mlir",
             "detach_elementwise_from_named_ops.mlir",
