[Codegen][GPU] Add FuseSubgroupConsumers pass
Add a pass that fuses tilable consumers and extract_slice ops into
subgroup-scoped pcf.generic/loop ops.

Right now this pass isn't added to any pipeline to separate pipeline
changes from pass introductions. Ultimately this pass will be added
right around where FuseAndHoistParallelLoops is in the
LLVMGPUTileAndFuse pass pipeline.

--- a/compiler/src/iree/compiler/Codegen/Common/GPU/test/CMakeLists.txt
+++ b/compiler/src/iree/compiler/Codegen/Common/GPU/test/CMakeLists.txt
@@ -36,6 +36,7 @@ iree_lit_test_suite(
     "gpu_expand_dimensions.mlir"
     "gpu_fold_swizzle_hint_ops.mlir"
     "gpu_fuse_and_hoist_forall.mlir"
+    "gpu_fuse_subgroup_consumers.mlir"
     "gpu_generalize_named_ops.mlir"
     "gpu_greedily_distribute_to_threads.mlir"
     "gpu_infer_memory_space.mlir"
