Wire Gemmini linalg lowering in IREE and add matmul IR dump

--- a/compiler/src/iree/compiler/CMakeLists.txt
+++ b/compiler/src/iree/compiler/CMakeLists.txt
@@ -9,5 +9,5 @@
 ################################################################################
 
 iree_add_all_subdirs()
-
 ### BAZEL_TO_CMAKE_PRESERVES_ALL_CONTENT_BELOW_THIS_LINE ###
+add_subdirectory(ThirdParty/buddy_gemmini)
