--- a/compiler/src/iree/compiler/Codegen/Common/test/BUILD.bazel
+++ b/compiler/src/iree/compiler/Codegen/Common/test/BUILD.bazel
@@ -63,6 +63,7 @@ iree_lit_test_suite(
             "forall_to_for.mlir",
             "forop_canonicalization.mlir",
             "generic_vectorization.mlir",
+            "gemmini_ir_dump.mlir",
             "hoist_statically_bound_allocations.mlir",
             "hoist_unrolled_vector_extract_insert_slice.mlir",
             "iree_codegen_canonicalize.mlir",
