[LinalgExt] Rename map_gather/map_scatter -> map_load/map_store

--- a/tests/e2e/linalg_ext_ops/BUILD.bazel
+++ b/tests/e2e/linalg_ext_ops/BUILD.bazel
@@ -19,8 +19,8 @@ ALL_SRCS = enforce_glob(
         "attention.mlir",
         "attention_i1_mask.mlir",
         "gather.mlir",
-        "map_gather.mlir",
-        "map_scatter.mlir",
+        "map_load.mlir",
+        "map_store.mlir",
         "scan.mlir",
         "scatter.mlir",
         "sort.mlir",
@@ -50,8 +50,8 @@ VMVX_SRCS = enforce_glob(
         "arg_compare.mlir",
         "attention.mlir",
         "gather.mlir",
-        "map_gather.mlir",
-        "map_scatter.mlir",
+        "map_load.mlir",
+        "map_store.mlir",
         "scan.mlir",
         "scatter.mlir",
         "sort.mlir",
@@ -88,8 +88,8 @@ LLVM_GPU_SRCS = enforce_glob(
     exclude = [
         "attention.mlir",
         "attention_i1_mask.mlir",
-        "map_gather.mlir",
-        "map_scatter.mlir",
+        "map_load.mlir",
+        "map_store.mlir",
     ],
 )
 
@@ -115,8 +115,8 @@ ROCM_HIP_SRCS = enforce_glob(
         "arg_compare.mlir",
         "attention.mlir",
         "gather.mlir",
-        "map_gather.mlir",
-        "map_scatter.mlir",
+        "map_load.mlir",
+        "map_store.mlir",
         "scan.mlir",
         "scatter.mlir",
         "sort.mlir",
@@ -154,8 +154,8 @@ iree_check_single_backend_test_suite(
         exclude = [
             "attention.mlir",
             "attention_i1_mask.mlir",
-            "map_gather.mlir",
-            "map_scatter.mlir",
+            "map_load.mlir",
+            "map_store.mlir",
             "top-k.mlir",
         ],
     ),
@@ -170,8 +170,8 @@ iree_check_single_backend_test_suite(
         [
             "arg_compare.mlir",
             "gather.mlir",
-            "map_gather.mlir",
-            "map_scatter.mlir",
+            "map_load.mlir",
+            "map_store.mlir",
             "scan.mlir",
             "scatter.mlir",
             "sort.mlir",
