--- a/tests/e2e/linalg_ext_ops/CMakeLists.txt
+++ b/tests/e2e/linalg_ext_ops/CMakeLists.txt
@@ -18,8 +18,8 @@ iree_check_single_backend_test_suite(
     "attention.mlir"
     "attention_i1_mask.mlir"
     "gather.mlir"
-    "map_gather.mlir"
-    "map_scatter.mlir"
+    "map_load.mlir"
+    "map_store.mlir"
     "scan.mlir"
     "scatter.mlir"
     "sort.mlir"
@@ -43,8 +43,8 @@ iree_check_single_backend_test_suite(
     "arg_compare.mlir"
     "attention.mlir"
     "gather.mlir"
-    "map_gather.mlir"
-    "map_scatter.mlir"
+    "map_load.mlir"
+    "map_store.mlir"
     "scan.mlir"
     "scatter.mlir"
     "sort.mlir"
@@ -88,8 +88,8 @@ iree_check_single_backend_test_suite(
     "arg_compare.mlir"
     "attention.mlir"
     "gather.mlir"
-    "map_gather.mlir"
-    "map_scatter.mlir"
+    "map_load.mlir"
+    "map_store.mlir"
     "scan.mlir"
     "scatter.mlir"
     "sort.mlir"
@@ -124,8 +124,8 @@ iree_check_single_backend_test_suite(
   SRCS
     "arg_compare.mlir"
     "gather.mlir"
-    "map_gather.mlir"
-    "map_scatter.mlir"
+    "map_load.mlir"
+    "map_store.mlir"
     "scan.mlir"
     "scatter.mlir"
     "sort.mlir"
