[CI] Update IREE test_suite (#23498)
* torch_ops expected output is now fetched from azure
* increased tolerance for convolution tests in torch_ops
* moves pytest_iree to top level in iree-test-suite

Diff:
https://github.com/iree-org/iree-test-suites/compare/c3b48ed923548e74b85329e201c12fe69cb1df2f...12c82056ac64e32c4a9599611364e5ce534e3a5d

--- a/.github/workflows/pkgci_test_torch.yml
+++ b/.github/workflows/pkgci_test_torch.yml
@@ -77,12 +77,13 @@ jobs:
         uses: actions/checkout@de0fac2e4500dabe0009e67214ff5f5447ce83dd # v6.0.2
         with:
           repository: iree-org/iree-test-suites
-          ref: c3b48ed923548e74b85329e201c12fe69cb1df2f
+          ref: 12c82056ac64e32c4a9599611364e5ce534e3a5d
           path: iree-test-suites
           lfs: false
       - name: Install Torch ops test suite requirements
         run: |
           source ${VENV_DIR}/bin/activate
+          pip install -e iree-test-suites
           python -m pip install -r iree-test-suites/torch_ops/requirements.txt
       - name: Run Torch ops test suite
         env:
@@ -145,7 +146,7 @@ jobs:
         uses: actions/checkout@de0fac2e4500dabe0009e67214ff5f5447ce83dd # v6.0.2
         with:
           repository: iree-org/iree-test-suites
-          ref: c3b48ed923548e74b85329e201c12fe69cb1df2f
+          ref: 12c82056ac64e32c4a9599611364e5ce534e3a5d
           path: iree-test-suites
           # Don't need lfs for torch models yet.
           lfs: false
@@ -156,6 +157,7 @@ jobs:
             --artifact-path=${PACKAGE_DOWNLOAD_DIR} \
             --fetch-gh-workflow=${{ inputs.artifact_run_id }}
           source ${VENV_DIR}/bin/activate
+          pip install -e ${{ github.workspace}}/iree-test-suites
           pip install -r ${{ github.workspace }}/iree-test-suites/torch_models/requirements.txt
         env:
           GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
