[Codegen][GPU] Improve CombineBarrierRegionsPass
Before this patch, combine barrier regions pass would only look for
adjacent barrier regions to combine. This was restrictive and didn't
always work for more complex things. The CombineValueBarrierOps pass
already had logic to combine ops even when there were other ops in
between.

This patch combines both the passes, sharing the logic of moving
operations between the two barrier ops, combining them into one.

This pass adds both the barrier combining transformations into one pass,
and renames it to GPUCombineValueSemanticBarriersPass.

--- a/compiler/src/iree/compiler/Codegen/Common/GPU/CMakeLists.txt
+++ b/compiler/src/iree/compiler/Codegen/Common/GPU/CMakeLists.txt
@@ -58,7 +58,7 @@ iree_cc_library(
     "GPUBubbleResourceCasts.cpp"
     "GPUCheckResourceUsage.cpp"
     "GPUCombineLayoutTransformation.cpp"
-    "GPUCombineValueBarriers.cpp"
+    "GPUCombineValueSemanticBarriers.cpp"
     "GPUConvertToCoalescedDMA.cpp"
     "GPUCreateFastSlowPath.cpp"
     "GPUDistribute.cpp"
