--- a/compiler/src/iree/compiler/Codegen/Common/GPU/BUILD.bazel
+++ b/compiler/src/iree/compiler/Codegen/Common/GPU/BUILD.bazel
@@ -65,7 +65,7 @@ iree_compiler_cc_library(
         "GPUBubbleResourceCasts.cpp",
         "GPUCheckResourceUsage.cpp",
         "GPUCombineLayoutTransformation.cpp",
-        "GPUCombineValueBarriers.cpp",
+        "GPUCombineValueSemanticBarriers.cpp",
         "GPUConvertToCoalescedDMA.cpp",
         "GPUCreateFastSlowPath.cpp",
         "GPUDistribute.cpp",
