--- a/compiler/src/iree/compiler/Codegen/LLVMGPU/Utils/CMakeLists.txt
+++ b/compiler/src/iree/compiler/Codegen/LLVMGPU/Utils/CMakeLists.txt
@@ -39,6 +39,7 @@ iree_cc_library(
     MLIRMemRefTransforms
     MLIRMemRefUtils
     MLIRNVGPUDialect
+    MLIRROCDLDialect
     MLIRSCFDialect
     MLIRSCFTransforms
     MLIRSideEffectInterfaces
