--- a/compiler/src/iree/compiler/Codegen/Dialect/Codegen/IR/CMakeLists.txt
+++ b/compiler/src/iree/compiler/Codegen/Dialect/Codegen/IR/CMakeLists.txt
@@ -77,6 +77,7 @@ iree_cc_library(
     MLIRViewLikeInterface
     iree::compiler::Codegen::Dialect::PCF::IR
     iree::compiler::Codegen::Interfaces::UKernelOpInterface
+    iree::compiler::Codegen::Utils::CodegenOptions
     iree::compiler::Dialect::Util::IR
     iree::compiler::Utils
   PUBLIC
